--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -85,11 +85,13 @@ main {
 
 .continent {
   width: 100%;
-  height: calc(100vh / 8 );
+  height: calc(100vh / 8);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 10px 0 30px;
+  text-decoration: none;
+  color: #fff;
 }
 
 .continent div {
