--- a/src/styles/CountriesList.css
+++ b/src/styles/CountriesList.css
@@ -4,19 +4,24 @@
   height: inherit;
   max-height: inherit;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: calc(100vh/8);
-  /* column-gap: 30px;
-  row-gap: 30px; */
+  grid-auto-rows: calc(100vh / 8);
 }
 
-/* .country {
+.country {
   display: flex;
-  justify-content: space-between;
-} */
+  flex-direction: column-reverse;
+  justify-content: center;
+  padding: 0 20px;
+}
 
 .country div {
   font-size: small;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  letter-spacing: 0.5px;
+}
+
+.label {
+  color: yellow;
 }
